# ManejoArchivosS3

./: .gitignore  README.md  lanzar.bat  main.py  pyproject.toml  requirements.txt
